# coffeepress-pressure-control

./: README.md  readme.md  todo.md
doc/: book.toml
doc/src/: SUMMARY.md  intro.md  todos.md
hardware/: .gitignore  Steuerplatine.kicad_pcb  Steuerplatine.kicad_pro  Steuerplatine.kicad_sch  ac_filter.kicad_sch  bom.ods  buck.kicad_sym  controller.kicad_sch  fp-lib-table  powersupply.kicad_sch  sym-lib-table  test.kicad_sch  triac.kicad_sch  zerocrossing.kicad_sch
hardware/simulation/: opamp_voltage.ipynb  spicetest.kicad_pro  spicetest.kicad_sch  spicetest.wbk  sym.ipynb
software/: .gitignore  Cargo.toml
software/rust/lapavoni/: Cargo.toml
software/rust/lapavoni/src/: main.rs
software/rust/src/: main.rs
software/src/: main.rs
