[package]
name = "lapavoni"
version = "0.1.0"
authors = ["tomatenkuchen <t.w92@gmx.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
esp-hal = { version = "0.16.1", features = ["esp32c3"] }
esp-backtrace = { version = "0.11.1", features = ["esp32c3", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.9.1", features = ["esp32c3"] }

